--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,116 +1,117 @@
 /*Мобільна версія*/
+
+header {
+    padding-top: 32px;
+    position: absolute;
+    width: 100%;
+    z-index: 9;
+}
+
 .header-container {
-  display: flex;
-  justify-content: space-between;
-  position: absolute;
-  z-index: 9;
-  padding-top: 32px;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
+    display: flex;
+    justify-content: space-between;
 }
 
 .header-logo {
-  display: flex;
-  gap: 8px;
+    display: flex;
+    gap: 8px;
 }
 .header-svg-logo {
-  fill: #fafafa;
+    fill: #fafafa;
 }
 .header-svg-btn {
-  stroke: #fafafa;
+    stroke: #fafafa;
 }
 
 .btn-mob-menu {
-  width: 28px;
-  height: 28px;
-  padding: 6px 1px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
+    width: 28px;
+    height: 28px;
+    padding: 6px 1px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
 }
 
 .header-container-nav {
-  display: none;
+    display: none;
 }
 
 .header-btn-order {
-  display: none;
+    display: none;
 }
 
 /*планшетна версія*/
 @media screen and (min-width: 768px) {
-  .btn-mob-menu {
-    display: none;
-  }
+    .btn-mob-menu {
+        display: none;
+    }
 
-  .header-container-nav {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+    .header-container-nav {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
-  .header-btn-navigation {
-    display: flex;
-    height: 39px;
-    padding: 15px;
-    background-color: transparent;
-    border: none;
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: -0.02em;
-    text-decoration: underline;
-    color: #fafafa;
-  }
+    .header-btn-navigation {
+        display: flex;
+        height: 39px;
+        padding: 15px;
+        background-color: transparent;
+        border: none;
+        font-weight: 500;
+        font-size: 16px;
+        letter-spacing: -0.02em;
+        text-decoration: underline;
+        color: #fafafa;
+    }
 
+    .header-btn-order {
+        display: flex;
+        background-color: #ed3b44;
+        border-radius: 60px;
+        padding: 18px 24px;
+        max-width: 164px;
+        height: 55px;
+        font-weight: 500;
+        font-size: 16px;
+        letter-spacing: -0.02em;
+        color: #fafafa;
+        border: none;
+        transition: background-color 250ms linear;
+    }
 
-  .header-btn-order {
-    display: flex;
-    background-color: #ed3b44;
-    border-radius: 60px;
-    padding: 18px 24px;;
-    max-width: 164px;
-    height: 55px;
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: -0.02em;
-    color: #fafafa;
-    border: none;
-    transition: background-color 250ms linear;
-  }
+    .header-btn-order:hover,
+    .header-btn-order:focus {
+        background-color: #e0373f;
+    }
 
-  .header-btn-order:hover, 
-  .header-btn-order:focus {
-    background-color: #e0373f;
-  } 
+    .header-navigation {
+        position: absolute;
+        top: 40px;
+        /* display: none; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 250ms linear;
+    }
 
-  .header-navigation {
-    position: absolute;
-    top: 40px;
-    /* display: none; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 250ms linear;
-  }
+    .open-nav {
+        opacity: 1;
+        pointer-events: auto;
+    }
 
-  .open-nav {
-    opacity: 1;
-    pointer-events: auto;
-  }
-
-  .header-navigation-link {
-    transition: color 250ms linear, text-decoration 250ms linear;
-  }
-  .header-navigation-link:hover,
-  .header-navigation-link:focus {
-    text-decoration: underline;
-    color: #ed3b44;
-  }
+    .header-navigation-link {
+        transition: color 250ms linear, text-decoration 250ms linear;
+    }
+    .header-navigation-link:hover,
+    .header-navigation-link:focus {
+        text-decoration: underline;
+        color: #ed3b44;
+    }
 }
