--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -33,7 +33,7 @@
     padding-bottom: 64px;
     padding-top: 30vh;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-image: url(../img/webp/modal1x.webp);
     background-position: center;
     background-size: contain;
