update about-me padding

--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -1,4 +1,4 @@
-<section class="about-me" id="about_me">
+<section class="about-me section" id="about_me">
     <div class="container">
         <h2 class="hidden">About me</h2>
         <div class="about-me-discr">
