--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -13,7 +13,7 @@ li.faq-ac-item {
     font-weight: 600;
     font-size: 16px;
     color: rgba(250, 250, 250, 0.4);
-    padding-bottom: 32px;
+    margin-bottom: 32px;
 }
 
 .h4-classes {
