--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,10 +1,17 @@
 .footer {
-    padding-top: 32px;
+    margin: auto;
+    padding-top: 96px;
     padding-bottom: 32px;
     background-image: url(../img/glass-effect-2-mob.png);
     background-repeat: no-repeat;
     background-position: right;
 }
+
+.container-footer {
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
 @media (min-resolution: 192dpi) {
     .footer {
         background-image: url(../img/glass-effect-2-mob-2x.png);
@@ -138,10 +145,11 @@
     left: 0;
     width: 100%;
     height: 100%;
+    padding-bottom: 138px;
     background: rgba(0, 0, 0, 0.4);
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     z-index: 1000;
     visibility: hidden;
     opacity: 0;
@@ -211,11 +219,25 @@
     color: rgba(250, 250, 250, 0.6);
 }
 
+@media (max-width: 335px) {
+    .footer-contacts a:first-child {
+        width: 165px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+
 @media (min-width: 768px) {
     .footer {
         padding-top: 80px;
         padding-bottom: 169px;
         background-image: url(../img/glass-effect-2-tab.png);
+    }
+
+    .container-footer {
+        padding-left: 32px;
+        padding-right: 32px;
     }
 
     @media (min-resolution: 192dpi) {
@@ -261,6 +283,10 @@
         font-size: 16px;
     }
 
+    .pop-up {
+        padding-bottom: 195px;
+    }
+
     .pop-up-content {
         padding: 64px;
         width: 492px;
@@ -280,8 +306,7 @@
 
 @media (min-width: 1440px) {
     .footer {
-        padding-left: 196px;
-        padding-right: 196px;
+        max-width: 1048px;
         background-image: url(../img/glass-effect-2-desc.png);
     }
 
