--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,63 +1,68 @@
-<footer id="work_together" class="container footer">
-    <div class="section footer-section">
-        <h2 class="footer-header">
-            <img
-                loading="lazy"
-                srcset="
-                    /img/lloydjefferson.png    1x,
-                    /img/lloydjefferson@x2.png 2x
-                "
-                src="/img/lloydjefferson.png"
-                alt="Lloyd Jefferson"
-                class="footer-image"
+<footer id="work_together" class="footer">
+    <div class="container-footer">
+        <div class="section footer-section">
+            <h2 class="footer-header">
+                <img
+                    loading="lazy"
+                    srcset="
+                        /img/lloydjefferson.png    1x,
+                        /img/lloydjefferson@x2.png 2x
+                    "
+                    src="/img/lloydjefferson.png"
+                    alt="Lloyd Jefferson"
+                    class="footer-image"
+                />
+                LET'S <span>WORK</span> TOGETHER
+            </h2>
+        </div>
+        <form class="footer-form">
+            <input
+                name="email"
+                class="form-input form-input-email"
+                type="email"
+                placeholder="clients@gmail.com"
+                id="email"
+                required
+                autocomplete="off"
+                pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
+                title="The field can contain e-mail address"
             />
-            LET'S <span>WORK</span> TOGETHER
-        </h2>
-    </div>
-    <form class="footer-form">
-        <input
-            name="email"
-            class="form-input form-input-email"
-            type="email"
-            placeholder="clients@gmail.com"
-            id="email"
-            required
-            autocomplete="off"
-            pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
-            title="The field can contain e-mail address"
-        />
-        <input
-            name="comment"
-            class="form-input form-input-comments"
-            type="text"
-            placeholder="comments"
-            id="comment"
-            required
-            autocomplete="off"
-            title='The field "comments" can contain text'
-        />
-        <button type="submit" class="btn-form">Send</button>
-    </form>
-    <div class="footer-contacts">
-        <a href="mailto:lloydjefferson@gmail.com">lloydjefferson@gmail.com</a>
-        <a href="tel:+3801111111111" class="footer-contact-phone"
-            >+380 11 1111 11 11</a
-        >
-    </div>
-    <div class="pop-up">
-        <div class="pop-up-content">
-            <button class="pop-up-close-btn" type="button">
-                <svg class="pop-up-close-icon" width="11" height="11">
-                    <use href="/img/sprite.svg#icon-close"></use>
-                </svg>
-            </button>
-            <h3 class="pop-up-title">
-                Thank you for your interest in cooperation!
-            </h3>
-            <p class="pop-up-text">
-                The manager will contact you shortly to discuss further details
-                and opportunities for cooperation. Please stay in touch.
-            </p>
+            <input
+                name="comment"
+                class="form-input form-input-comments"
+                type="text"
+                placeholder="comments"
+                id="comment"
+                required
+                autocomplete="off"
+                title='The field "comments" can contain text'
+            />
+            <button type="submit" class="btn-form">Send</button>
+        </form>
+        <div class="footer-contacts">
+            <a href="mailto:lloydjefferson@gmail.com"
+                >lloydjefferson@gmail.com</a
+            >
+            <a href="tel:+3801111111111" class="footer-contact-phone"
+                >+380 11 1111 11 11</a
+            >
+        </div>
+        <div class="pop-up">
+            <div class="pop-up-content">
+                <button class="pop-up-close-btn" type="button">
+                    <svg class="pop-up-close-icon" width="11" height="11">
+                        <use href="/img/sprite.svg#icon-close"></use>
+                    </svg>
+                </button>
+                <h3 class="pop-up-title">
+                    Thank you for your interest in cooperation!
+                </h3>
+                <p class="pop-up-text">
+                    The manager will contact you shortly to discuss further
+                    details and opportunities for cooperation. Please stay in
+                    touch.
+                </p>
+            </div>
         </div>
     </div>
 </footer>
