--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -10,7 +10,7 @@
                     that reflect each client's unique personality.
                 </p>
             </div>
-            <div class="discr-card">
+            <div class="discr-card-img">
                 <picture>
                     <source
                         srcset="
