--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -160,9 +160,10 @@
 }
 
 .project-pic {
-    margin: auto;
+    /* margin: auto;
     padding-top: 100px;
-    padding-bottom: 100px;
+    padding-bottom: 100px; */
+    padding: 100px 16px;
 }
 
 @media (min-width: 768px) {
@@ -170,10 +171,11 @@
         width: auto;
         height: 55px;
         display: flex;
-        left: 64px;
+        /* left: 64px; */
         gap: 6px;
-        padding-top: 64px;
-        padding-bottom: 64px;
+        /* padding-top: 64px;
+        padding-bottom: 64px; */
+        padding-bottom: 0;
     }
     .tag {
         padding: 18px;
@@ -209,14 +211,16 @@
 
     .div-list-p {
         width: 100%;
-        padding-top: 0;
-        padding-bottom: 64px;
+        /* padding-top: 0;
+        padding-bottom: 64px; */
+        padding: 64px;
     }
 
     .project-pic {
         height: 625px;
         display: flex;
         align-items: center;
+        padding: 120px 24px;
     }
 
     .swiper-button-prev {
@@ -236,13 +240,16 @@
     .div-list-p {
         width: 50%;
         border-radius: 24px 0 0 24px;
-        padding-left: 64px;
+        /* padding-left: 64px;
         padding-top: 0;
-        padding-bottom: 64px;
+        padding-bottom: 64px; */
         /* padding-right: auto; */
         height: auto;
     }
-
+    .project-pic {
+        padding-left: 37px;
+        padding-right: 37px;
+    }
     .tags-panel {
         width: auto;
         height: 55px;
@@ -260,14 +267,14 @@
     }
     .p-project {
         margin-top: 223px;
-        margin-right: 130px;
+        /* margin-right: 130px; */
         font-size: 44px;
         line-height: 100%;
         letter-spacing: -0.03em;
-        margin-bottom: 32px;
+        /* margin-bottom: 32px; */
     }
     .bth-project {
-        margin-top: 0;
+        margin-top: 32px;
         padding: 18px 50px;
         width: 177px;
         height: 55px;
